Require a manifest for default installed web apps.

This ensures good metadata is present for pre installed apps.

Bug: 898074
Change-Id: Idb529dc65bc9c804599990f63c19146720c6f327
Reviewed-on: https://chromium-review.googlesource.com/c/1295635
Commit-Queue: Ben Wells <benwells@chromium.org>
Reviewed-by: Giovanni Ortuño Urquidi <ortuno@chromium.org>
Cr-Commit-Position: refs/heads/master@{#602602}
Former-commit-id: 2f34991d490fe3788cb12aaefc42cdab73711f9a